Use pygments style in code builder

--- a/docs/docs/drift.scss
+++ b/docs/docs/drift.scss
@@ -1,1 +1,5 @@
-@import "package:drift_docs/style/highlight"
+.highlight a {
+  color: inherit !important;
+  text-decoration-style: dashed;
+  text-decoration-line: underline;
+}
